# scripts

./: .gitignore  delete_users.py  pyproject.toml  switch_user_perms.py  upload_candidates.py  upload_users.py
