[tool.poetry]
name = "scripts"
version = "0.1.0"
description = "Basic scripts used in the development of Fraser Votes"
authors = ["Jason Huang <jasonhuang20035@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
firebase-admin = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
